# toxsh

./: .gitignore  CMakeLists.txt  README.txt
common/: core.cpp  core.hpp  xtox.cpp  xtox.h
common/Settings/: settings.cpp  settings.hpp
dtnat/: CMakeLists.txt  dtnat.cpp  dtnat.h  main.cpp  ns_turn_defs.h
dtnat/client/: ns_turn_msg.c
etc/: qtox.ini  tox-bootstrapd.conf
kdns/: CMakeLists.txt  kdns.cpp  kdns.h  main.cpp  queue.cpp  queue.h
libtroh/: cmdprovider.cpp  cmdprovider.h  cmdsender.cpp  cmdsender.h  debugoutput.cpp  packet.sql  readme.txt
nathlp/: CMakeLists.txt  main.cpp  nathlp.cpp  rlysrv.cpp  udp.c
p2psh/: CMakeLists.txt  cmain.cpp  peersrv.cpp  peersrv.h  regsrv.cpp  regsrv.h  smain.cpp  srudp.cpp  srudp.h  stunauth.h.in  stunclient.cpp  stunclient.h  xshcli.cpp  xshcli.h  xshdefs.h  xshsrv.cpp  xshsrv.h
pytoxmon/: Makefile  main.py  qtutil.py  ui_dhtmon.py
pytoxsh/: Makefile  cmdact.py  httpserver.py  mainwindow.ui  nitro.py  qtoxkit.py  qtutil.py  readme.md  setup.py  srudp.py  srudp_test.py  toxnettuncli.py  toxnettunsrv.py  toxshd.py  toxsocket.py  toxtun.ini  toxtun_whttp.ini  toxtuncli.py  toxtunconfig.py  toxtunsrv.py  toxtunutils.py  ui_mainwindow.py
run/: keys
toxmon/: CMakeLists.txt  cpptox.h  dhtmon.cpp  dhtmon.h  dhtmon.ui  dhtproc.cpp  dhtproc.h  dummy.cpp  dummy.h  main.cpp
toxshc/: CMakeLists.txt
toxshd/: CMakeLists.txt  commandhandler.cpp  commandhandler.h  main.cpp  server.cpp  server.h  toxshc.cpp
toxsocks/: CMakeLists.txt  main.cpp  srudp.cpp  srudp.h  toxnet.cpp  toxnet.h  tunnelc.cpp  tunnelc.h  tunneld.cpp  tunneld.h
toxtun/: BUGS.txt  CMakeLists.txt  bilayer.c  bilayer.h  enetpoll.cpp  enetpoll.h  main.cpp  protocol.c  qtoxkit.cpp  qtoxkit.h  readme.md  readme.txt  serializer.cpp  serializer.h  srudp.h  toxnet.cpp  toxtun_whttp.ini  toxtun_whtun.ini  toxtunbase.cpp  toxtunbase.h  toxtunutils.cpp  toxtunutils.h  tunnelc.cpp  tunnelc.h  tunneld.cpp  tunneld.h
toxtun/enetinc/enet/: enet.h  types.h  unix.h
trohc/: CMakeLists.txt  cmdprovider.cpp  cmdresponser.cpp  cmdresponser.h  cmdrunner.cpp  cmdrunner.h  main.cpp  server.cpp  server.h  virttcpc.cpp  virttcpc.h
trohd/: CMakeLists.txt  cmdprovider.cpp  cmdsender.cpp  cmdsender.h  main.cpp  server.cpp  server.h  trohd_automoc.cpp  virttcpd.cpp  virttcpd.h
webshc/: CMakeLists.txt  main.cpp
webshd/: CMakeLists.txt  cmdprovider.cpp  cmdprovider.h  cmdresponser.cpp  cmdresponser.h  cmdrunner.cpp  cmdrunner.h  server.cpp  server.h
